--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="google_maps_API_key">AIzaSyCzeCigMhYFV9wx6kQuHmuuZhmm7aD487Y</string>
 
     <string name="app_name">GoogleMapsGooglePlaces</string>
+    <string name="title_activity_map2">Map</string>
 
 
 </resources>
